Release 0.6:
  - do not (un)escape ampersand in attributes
  - fix META version
  - generate and install .cmxs file

Release 0.5:
  - mod: do not use string representation to check for changes in
    fixpoint computation
  - API change: Xtmpl.E of tag * atts * subs
  - API change: No more Xtmpl.T constructor
  - API change: make API more homogeneous
  - API change: handle prefix in nodes and attributes

Release 0.4:
  - add: string_of_xmls

Release 0.3 (2012/08/30):
  * mod: "empty" env now contains the main_ tag remover
  * fix: all eval functions now remove the main_ tag (because
    all env now contains the binding to do so by default)

Release 0.2 (2012/08/28):

	* mod: env_of_list now fills the environment from left to right
	* add: new exception No_change for callbacks to indicate no change
